# hybrid-interpretability

./: .gitmodules  LICENSE  README.md  Retrieval_with_Sparse_Attention_in_RG.ipynb  main.py  pyproject.toml  requirements.txt
hf_recurrent_gemma/: __init__.py  configuration_recurrent_gemma.py  modeling_recurrent_gemma.py
